# cpp_template

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  run.sh
main/cmake/: CMakeRC.cmake  README.md.in
main/cmake/exports/: README.md.in  template-config-debug.cmake  template-config-release.cmake  template-config.cmake  z-functions.cmake  z-import.cmake  z-import.cmake.in  znative-config.cmake  znative-functions.cmake
main/include/: Platform.h
main/libs/ios/: README.md
main/libs/linux/: README.md
main/libs/macos/: README.md
main/libs/win32/: README.md
main/public/: README.md  public.cmake
main/public/include/: Platform.h  README.md
main/public/include/znative/: ZBase.h  ZLog.h
main/public/include/znative/base/: FlexArray.h  RawData.h
main/public/include/znative/gles/: Framebuffer.h  GLCoord.h  GLUtil.h  Program.h  Texture.h  Viewport.h
main/public/include/znative/utils/: MathUtils.h  StrUtils.h  ThreadUtils.h  TimeUtils.h
main/public/libs/: README.md
main/public/src/: Public.cpp  ZLog.cpp
main/src/android/: Platform.cpp
main/src/common/: Platform.h
main/src/harmony/: Platform.cpp
main/src/ios/: Platform.cpp
main/src/macos/: Platform.cpp
samples/local/: CMakeLists.txt
samples/local/libs/glfw-3.4/: CMakeLists.txt
samples/local/src/: IWindow.h  MainApp.cpp  MainApp.h  MainWindow.cpp  MainWindow.h  ThorvgTestWindow.cpp  ThorvgTestWindow.h  main.cpp
samples/src/: main.cpp
